--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -2,3 +2,6 @@
 pathlib_mate                            # autopep8 your code
 twine                                   # make distribution archive
 wheel                                   # make pre-compiled distribution package
+diskcache
+requests
+beautifulsoup4
