--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,13 +18,9 @@ jobs:
       USING_COVERAGE: "3.6,3.7,3.8,3.9"
     strategy:
       matrix:
-#        os: ["ubuntu-latest", "windows-latest"]
-        os: ["ubuntu-latest", ] # for debug only
+        os: ["ubuntu-latest", ]
 #        python-version: ["3.6", "3.7", "3.8", "3.9"]
         python-version: ["3.8", ] # for debug only
-        exclude:
-          - os: windows-latest # this is a useless exclude rules for demonstration use only
-            python-version: 2.7
     steps:
       - uses: "actions/checkout@v3" # https://github.com/marketplace/actions/checkout
       - uses: "actions/setup-python@v3" # https://github.com/marketplace/actions/setup-python
