--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: "actions/setup-python@v3" # https://github.com/marketplace/actions/setup-python
         with:
           python-version: "${{ matrix.python-version }}"
-      - name: Start LocalStack
+      - name: Start LocalStack # https://docs.localstack.cloud/ci/github-actions/
         run: |
           # install LocalStack cli and awslocal
           pip install localstack awscli-local[ver1]
