--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,8 @@ jobs:
         with:
           python-version: "${{ matrix.python-version }}"
       - name: Start LocalStack # https://docs.localstack.cloud/ci/github-actions/
+        env:
+          LOCALSTACK_API_KEY: foobar
         run: |
           # install LocalStack cli and awslocal
           pip install localstack awscli-local[ver1]
